globus-dsi-rest (0.23-1+gt6.@distro@) @distro@; urgency=low

  * Allow NULL key or value in URI parameters

 -- Globus Toolkit <support@globus.org>  Wed, 11 Jan 2017 15:31:33 -0500

globus-dsi-rest (0.22-1+gt6.@distro@) @distro@; urgency=low

  * Ensure printable log level string is not null.
  * Leak in read_json
  * Prefer timeout error over libcurl aborted by callback error

 -- Globus Toolkit <support@globus.org>  Mon, 19 Dec 2016 15:50:55 -0500

globus-dsi-rest (0.21-1+gt6.@distro@) @distro@; urgency=low

  * Favor timeout error over libcurl aborted error

 -- Globus Toolkit <support@globus.org>  Wed, 14 Dec 2016 11:28:51 -0500

globus-dsi-rest (0.20-1+gt6.@distro@) @distro@; urgency=low

  * Favor timeout error over libcurl aborted error

 -- Globus Toolkit <support@globus.org>  Wed, 14 Dec 2016 11:28:51 -0500

globus-dsi-rest (0.20-1+gt6.@distro@) @distro@; urgency=low

  * Add curl cookie/ssl/dns resource sharing between handles

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2016 13:03:46 -0500

globus-dsi-rest (0.18-1+gt6.@distro@) @distro@; urgency=low

  * Improve diagnostics

 -- Globus Toolkit <support@globus.org>  Thu, 03 Nov 2016 09:03:47 -0400

globus-dsi-rest (0.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix some logging issues

 -- Globus Toolkit <support@globus.org>  Fri, 19 Aug 2016 11:26:29 -0400

globus-dsi-rest (0.16-1+gt6.@distro@) @distro@; urgency=low

  * Add eof flag to gridftp_op_arg to pass back EOF state to requester
  * Handle read until EOF in gridftp_op handling

 -- Globus Toolkit <support@globus.org>  Tue, 26 Jul 2016 14:46:05 -0400

globus-dsi-rest (0.15-1+gt6.@distro@) @distro@; urgency=low

  * Track amounts read/written in response callback

 -- Globus Toolkit <support@globus.org>  Tue, 19 Jul 2016 17:40:39 -0400

globus-dsi-rest (0.14-1+gt6.@distro@) @distro@; urgency=low

  * Add globus_dsi_rest_error_is_retryable()

 -- Globus Toolkit <support@globus.org>  Mon, 18 Jul 2016 15:11:39 -0400
